added the 3rd section and some correction

--- a/index.html
+++ b/index.html
@@ -148,13 +148,15 @@
     </header>
 
     <main>
-      <section class="lg:mx-28 ">
+      <section class="lg:mx-28">
         <h2
           class="mb-12 text-center text-accent-color font-semibold text-3xl lg:text-start"
         >
           Services
         </h2>
-        <div class="w-full mb-32 gap-6 space-y-6 lg:space-y-0 lg:flex lg:justify-between">
+        <div
+          class="w-full mb-32 gap-6 space-y-6 lg:space-y-0 lg:flex lg:justify-between"
+        >
           <div class="bg-secoundary-color p-6 rounded-xl">
             <div class="flex justify-center p-">
               <img
@@ -207,57 +209,198 @@
             </div>
           </div>
         </div>
-        <!-- 
-          <div class="bg-secoundary-color p-16">
-            <div class="flex justify-center p-">
-              <img
-                class="bg-white w-24 h-24 p-6 rounded-full"
-                src="assets/service.png"
-                alt=""
-              />
-            </div>
-            <div class="text-center">
-              <h4 class="mt-6 mb-3 font-semibold text-2xl">24/7 Services</h4>
-              <p>
-                To earn the respect (and eventually love) of your customers, you
-                first have to respect those customers. That is why Golden Rule
-                behavior is embraced by most of the winning companies.
+      </section>
+      <section class="bg-secoundary-color  md:w-full">
+        <h2
+          class="p-10 text-center text-accent-color font-semibold text-4xl lg:text-start"
+        >
+          Popular Products
+        </h2>
+        <div class="p-10 lg:flex lg:gap-10 " >
+          <div class="p-10 mb-5 rounded-3xl bg-accent-color flex">
+            <div>
+              <h1 class="text-3xl text-white">30% 0ff</h1>
+              <p class="my-5 text-sm text-[#111111]">
+                Discover a world of treats, toys, and <br />
+                essentials handpicked for
               </p>
+              <button class="btn rounded-xl px-16">Buy Now</button>
+            </div>
+            <div>
+              <img class=" mt-10   h-full" src="assets/vegetable-offer.png" alt="" />
             </div>
           </div>
+          <div >
+            <div class=" grid grid-cols-3 gap-x-5 gap-y-5">
+              <div class="bg-white  rounded-xl flex gap-0 ">
+                <div class="p-4">
+                  <img
+                    class="bg-secoundary-color p-2 rounded-3xl"
+                    src="assets/onion.png"
+                    alt=""
+                  />
+                </div>
+                <div class="p-4">
+                  <h4>
+                    <i class="fa-solid fa-star" style="color: #ffd43b"> </i> 4.5
+                  </h4>
+                  <h1 class="font-medium">Onion 1 KG</h1>
+                  <h2 class="font-medium" >$39.99</h2>
+                </div>
+              </div>
 
-          <div class="bg-secoundary-color p-16">
-            <div class="flex justify-center p-">
-              <img
-                class="bg-white w-24 h-24 p-6 rounded-full"
-                src="assets/service.png"
-                alt=""
-              />
-            </div>
-            <div class="text-center">
-              <h4 class="mt-6 mb-3 font-semibold text-2xl">24/7 Services</h4>
-              <p>
-                To earn the respect (and eventually love) of your customers, you
-                first have to respect those customers. That is why Golden Rule
-                behavior is embraced by most of the winning companies.
-              </p>
+              <div class="bg-white w-full rounded-xl flex">
+                <div class="p-4">
+                  <img
+                    class="bg-secoundary-color p-2 rounded-3xl"
+                    src="assets/onion.png"
+                    alt=""
+                  />
+                </div>
+                <div class="p-4">
+                  <h4>
+                    <i class="fa-solid fa-star" style="color: #ffd43b"> </i> 4.5
+                  </h4>
+                  <h1 class="font-medium">Onion 1 KG</h1>
+                  <h2 class="font-medium">$39.99</h2>
+                </div>
+              </div>
+
+              <div class="bg-white w-full rounded-xl flex">
+                <div class="p-4">
+                  <img
+                    class="bg-secoundary-color p-2 rounded-3xl"
+                    src="assets/onion.png"
+                    alt=""
+                  />
+                </div>
+                <div class="p-4">
+                  <h4>
+                    <i class="fa-solid fa-star" style="color: #ffd43b"> </i> 4.5
+                  </h4>
+                  <h1 class="font-medium">Onion 1 KG</h1>
+                  <h2 class="font-medium">$39.99</h2>
+                </div>
+              </div>
+
+              <div class="bg-white w-full rounded-xl flex">
+                <div class="p-4">
+                  <img
+                    class="bg-secoundary-color p-2 rounded-3xl"
+                    src="assets/onion.png"
+                    alt=""
+                  />
+                </div>
+                <div class="p-4">
+                  <h4>
+                    <i class="fa-solid fa-star" style="color: #ffd43b"> </i> 4.5
+                  </h4>
+                  <h1 class="font-medium">Onion 1 KG</h1>
+                  <h2 class="font-medium">$39.99</h2>
+                </div>
+              </div>
+
+              <div class="bg-white w-full rounded-xl flex">
+                <div class="p-4">
+                  <img
+                    class="bg-secoundary-color p-2 rounded-3xl"
+                    src="assets/onion.png"
+                    alt=""
+                  />
+                </div>
+                <div class="p-4">
+                  <h4>
+                    <i class="fa-solid fa-star" style="color: #ffd43b"> </i> 4.5
+                  </h4>
+                  <h1 class="font-medium">Onion 1 KG</h1>
+                  <h2 class="font-medium">$39.99</h2>
+                </div>
+              </div>
+
+              <div class="bg-white w-full rounded-xl flex">
+                <div class="p-4">
+                  <img
+                    class="bg-secoundary-color p-2 rounded-3xl"
+                    src="assets/onion.png"
+                    alt=""
+                  />
+                </div>
+                <div class="p-4">
+                  <h4>
+                    <i class="fa-solid fa-star" style="color: #ffd43b"> </i> 4.5
+                  </h4>
+                  <h1 class="font-medium">Onion 1 KG</h1>
+                  <h2 class="font-medium">$39.99</h2>
+                </div>
+              </div>
+
+              <div class="bg-white w-full rounded-xl flex">
+                <div class="p-4">
+                  <img
+                    class="bg-secoundary-color p-2 rounded-3xl"
+                    src="assets/onion.png"
+                    alt=""
+                  />
+                </div>
+                <div class="p-4">
+                  <h4>
+                    <i class="fa-solid fa-star" style="color: #ffd43b"> </i> 4.5
+                  </h4>
+                  <h1 class="font-medium">Onion 1 KG</h1>
+                  <h2 class="font-medium">$39.99</h2>
+                </div>
+              </div>
+
+              <div class="bg-white w-full rounded-xl flex">
+                <div class="p-4">
+                  <img
+                    class="bg-secoundary-color p-2 rounded-3xl"
+                    src="assets/onion.png"
+                    alt=""
+                  />
+                </div>
+                <div class="p-4">
+                  <h4>
+                    <i class="fa-solid fa-star" style="color: #ffd43b"> </i> 4.5
+                  </h4>
+                  <h1 class="font-medium">Onion 1 KG</h1>
+                  <h2 class="font-medium">$39.99</h2>
+                </div>
+              </div>
+
+              <div class="bg-white w-full rounded-xl flex">
+                <div class="p-4">
+                  <img
+                    class="bg-secoundary-color p-2 rounded-3xl"
+                    src="assets/onion.png"
+                    alt=""
+                  />
+                </div>
+                <div class="p-4">
+                  <h4>
+                    <i class="fa-solid fa-star" style="color: #ffd43b"> </i> 4.5
+                  </h4>
+                  <h1 class="font-medium">Onion 1 KG</h1>
+                  <h2 class="font-medium">$39.99</h2>
+                </div>
+              </div>
             </div>
           </div>
-        </div> -->
+        </div>
       </section>
     </main>
     <footer
-      class="bg-accent-color text-secoundary-color lg:w-full lg:h-96 md:w-full"
+      class="bg-accent-color text-secoundary-color pl-4 lg:w-full lg:h-96 md:w-full"
     >
       <div
         class="flex flex-col lg:flex-row max-w-5xl gap-6 mx-auto lg:items-center lg:justify-between lg:h-96"
       >
-        <div class="w-76 mr-10 mt-16 lg:mr-0 relative space-y-4">
+        <div class="w- mr-10 mt-16 lg:76 lg:mr-0 relative space-y-4">
           <img class="" src="./assets/logo-footer.png" alt="" />
 
-          <p>
-            Discover a world of treats, toys, and essentials handpicked for your
-            furry friends
+          <p class="">
+            Discover a world of treats, toys, and <br />
+            essentials handpicked for your furry friends
           </p>
         </div>
         <div class="font-semibold space-y-6 mt-6 lg:ml-0">
@@ -267,7 +410,7 @@
         </div>
         <div class="mt-24">
           <h1 class="text-sm">Follow Us</h1>
-          <div class="flex">
+          <div class="flex -ml-2">
             <i
               class="fa-brands fa-facebook p-2 rounded-full text-[#EFEBE3] mr-2"
             ></i>
