added the  some correction

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- Nav bar start Here -->
       <header class="max-w-5xl mx-auto ">
         <!-- Nav bar start Here -->
-        <nav class="space-x-4 border-b-2 border-green-500">
+        <nav class="space-x-4 border-b-2 border-green-500 md:border-0 ">
           <div class="navbar lg:pt-8 justify-between">
             <div class="w-36 h-12">
               <img class="w-28 lg:w-full " src="./assets/logo-header.png" alt="" />
@@ -81,7 +81,7 @@
                 <i
                   class="fa-solid fa-cart-shopping p-2 rounded-full bg-[#ffffff] text-[#737373] mr-2"
                 ></i>
-                <button class="px-8 btn btn-outline border-accent-color">
+                <button class="px-8 btn btn-outline border-accent-color hover:bg-green-600">
                   <a class="text-[#1C1C1C]">Login </a>
                 </button>
                 <button class="btn bg-accent-color btn-outlin">
@@ -124,7 +124,7 @@
 
                 Count</span
               >
-              On, Prices You’ll Love!
+              On, Prices You’ll <span class="animate-pulse text-red-600">Love!</span>
             </h3>
             <p
               class="font-medium text-center text-[#494949] mb-6 text-sm lg:text-base lg:w-11/12 lg:px-10"
